--- a/AIML/ml_data_introduction.ipynb
+++ b/AIML/ml_data_introduction.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNFFwsEqOlv6zS1nR3cUapZ",
+      "authorship_tag": "ABX9TyMvNz6Ov4My+RZyymWJkO/c",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -163,6 +163,8 @@
     {
       "cell_type": "markdown",
       "source": [
+        "\n",
+        "\n",
         "## Discrete scatter of forge data"
       ],
       "metadata": {
@@ -212,13 +214,13 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# New section"
-      ],
+      "cell_type": "code",
+      "source": [],
       "metadata": {
-        "id": "3nTCivKMoqfR"
-      }
+        "id": "BFRWmeEszYmM"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -357,11 +359,11 @@
         "print({n: v for n,v in zip(cancer.target_names, np.bincount(cancer.target))})"
       ],
       "metadata": {
-        "id": "moM41iYcp7dr",
-        "outputId": "52327ab6-cb37-4f0d-d3be-9ead47d261c1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "moM41iYcp7dr",
+        "outputId": "52327ab6-cb37-4f0d-d3be-9ead47d261c1"
       },
       "execution_count": 26,
       "outputs": [
@@ -416,6 +418,54 @@
             "    \"worst fractal dimension\": 0.1189\n",
             "}\n",
             "{'malignant': 212, 'benign': 357}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.linear_model import LinearRegression\n",
+        "from sklearn.datasets import load_breast_cancer\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "import numpy as np\n",
+        "import json\n",
+        "\n",
+        "X_train, X_test, y_train, y_test = train_test_split(cancer.data, cancer.target, random_state=1)\n",
+        "\n",
+        "model = LogisticRegression(max_iter=10)\n",
+        "model.fit(X_train, y_train)\n",
+        "print(model.score(X_test, y_test))"
+      ],
+      "metadata": {
+        "id": "6g38qD3yzbDS",
+        "outputId": "bfb0223c-395a-48d2-b846-d7cfea7544cc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.9090909090909091\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/sklearn/linear_model/_logistic.py:469: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+            "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+            "\n",
+            "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+            "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+            "Please also refer to the documentation for alternative solver options:\n",
+            "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+            "  n_iter_i = _check_optimize_result(\n"
           ]
         }
       ]
